2000-05-25  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/GSIArray.h: remove config.h
	* Headers/gnustep/base/GSIMap.h: Likewise.

2000-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([-directoryContentsAtPath:])
	Don't follow symbolic links

2000-05-23  Adam Fedor  <fedor@gnu.org>

	* Source/NSBundle.m (+initialize): Check if /proc/self/exe returns
	a real link, otherwise get path from NSProcessInfo.

	* NSData: Correct #ifdef NEEDS_WORD_ALIGN to #if

2000-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: comparison with zero length range is always
	NSOrderdSame

2000-05-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: ([-methodSignatureForSelector:])
	Re-fix attempting to handle creation of local method signature rather
	than returning a proxy to a remote one. Dumb error in first attempt.

2000-05-10  Adam Fedor  <fedor@gnu.org>

	* NSBundle.m (-classNamed:): Hacks for getting classes from 
	_gnustep_bundle.
	(-principalClass): Likewise.
	(-load): Don't try to call load bundle if we are _gnustep_bundle.

2000-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: ([-methodSignatureForSelector:])
	Fix attempting to handle creation of local method signature rather than
	returning a proxy to a remote one.

2000-05-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: ([-descriptionWithCalendarFormat:locale:])
	fix '%y' format for any year - bug reported by David Relson

2000-05-06  James Dessart <skwirl@cam.org>
	
	* Documentation/gsdoc/NSString.gsdoc : 
	* Documentation/gsdoc/NSString.html  :
	Added some basic doc

2000-05-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSHomeDirectoryForUser() protect with locks for
	thread safety.

2000-05-02  Adam Fedor  <fedor@gnu.org>

	* configure.in: Add check for word alignment. Also don't define
	HAVE_SYS_PROC_EXE on systems that need fake main.