@@ -1,3 +1,8 @@
+2000-05-27  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSBundle.m: Protect all use of map tables of bundles
+	using lock - should make class thread-safe.
+
 2000-05-25  Adam Fedor  <fedor@gnu.org>
 
 	* Headers/gnustep/base/GSIArray.h: remove config.h
